--- a/interface-grafica/bower.json
+++ b/interface-grafica/bower.json
@@ -2,7 +2,8 @@
   "name": "interface-grafica",
   "main": "index.html",
   "dependencies": {
-    "polymer": "Polymer/polymer#^1.4.0"
+    "polymer": "Polymer/polymer#^1.4.0",
+    "vaadin-upload": "^1.1.4"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
