--- a/servidor/package.json
+++ b/servidor/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "express": "^4.15.2",
     "express-fileupload": "^0.1.2",
+    "pdf2json": "^1.1.7",
+    "pdf2table": "0.0.1",
     "textract": "^2.1.1"
   }
 }
