--- a/servidor/package.json
+++ b/servidor/package.json
@@ -15,6 +15,7 @@
     "pdf2json": "^1.1.7",
     "pdf2table": "0.0.1",
     "textract": "^2.1.1",
+    "xlsx-to-json": "^0.2.4",
     "xml2js": "^0.4.17"
   }
 }
