--- a/servidor/package.json
+++ b/servidor/package.json
@@ -9,9 +9,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "asyncawait": "^1.0.6",
     "csvtojson": "^1.1.4",
     "express": "^4.15.2",
     "express-fileupload": "^0.1.2",
+    "google-translate-api": "^2.2.2",
     "pdf2json": "^1.1.7",
     "pdf2table": "0.0.1",
     "textract": "^2.1.1",
