--- a/servidor/public/bower.json
+++ b/servidor/public/bower.json
@@ -10,7 +10,10 @@
     "paper-menu": "PolymerElements/paper-menu#^1.2.2",
     "paper-item": "PolymerElements/paper-item#^1.2.1",
     "app-route": "PolymerElements/app-route#^0.9.3",
-    "login-fire": "^0.1.5"
+    "login-fire": "^0.1.5",
+    "paper-card": "PolymerElements/paper-card#^1.1.4",
+    "iron-icon": "PolymerElements/iron-icon#^1.0.12",
+    "iron-icons": "PolymerElements/iron-icons#^1.2.0"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
