se agrego la parte de authentificacion

--- a/servidor/package.json
+++ b/servidor/package.json
@@ -10,10 +10,15 @@
   "license": "ISC",
   "dependencies": {
     "asyncawait": "^1.0.6",
+    "bcrypt-nodejs": "0.0.3",
+    "body-parser": "^1.17.1",
     "csvtojson": "^1.1.4",
     "express": "^4.15.2",
     "express-fileupload": "^0.1.2",
     "google-translate-api": "^2.2.2",
+    "jwt-simple": "^0.5.1",
+    "moment": "^2.18.1",
+    "mongoose": "^4.9.6",
     "pdf2json": "^1.1.7",
     "pdf2table": "0.0.1",
     "socket.io": "^1.7.3",
