--- a/servidor/public/bower.json
+++ b/servidor/public/bower.json
@@ -18,7 +18,8 @@
     "paper-tabs": "PolymerElements/paper-tabs#^1.8.0",
     "neon-animation": "PolymerElements/neon-animation#^1.2.5",
     "iron-form": "PolymerElements/iron-form#^1.1.4",
-    "paper-toast": "PolymerElements/paper-toast#^1.3.1"
+    "paper-toast": "PolymerElements/paper-toast#^1.3.1",
+    "iron-localstorage": "PolymerElements/iron-localstorage#^1.0.6"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
