--- a/servidor/public/bower.json
+++ b/servidor/public/bower.json
@@ -28,7 +28,9 @@
     "paper-scroll-header-panel": "PolymerElements/paper-scroll-header-panel#^1.0.16",
     "iron-flex-layout": "PolymerElements/iron-flex-layout#^1.3.7",
     "multi-chart": "PolymerEl/multi-chart#^0.7.3",
-    "multi-verse": "PolymerEl/multi-verse#^0.7.9"
+    "multi-verse": "PolymerEl/multi-verse#^0.7.9",
+    "google-map": "GoogleWebComponents/google-map#^1.2.0",
+    "google-chart": "GoogleWebComponents/google-chart#^1.1.2"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
